Fixing gallery on mobile

--- a/shopify/assets/section-main-product.css
+++ b/shopify/assets/section-main-product.css
@@ -819,12 +819,8 @@ a.product__text {
 }
 
 @media screen and (max-width: 749px) {
-  .product--thumbnail
-    .is-active
-    > .product__modal-opener:not(.product__modal-opener--image),
-  .product--thumbnail_slider
-    .is-active
-    > .product__modal-opener:not(.product__modal-opener--image) {
+  .product--thumbnail .is-active > .product__modal-opener:not(.product__modal-opener--image),
+  .product--thumbnail_slider .is-active > .product__modal-opener:not(.product__modal-opener--image) {
     display: none;
   }
 
@@ -1176,7 +1172,14 @@ a.product__text {
     display: block;
     position: absolute;
     background: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     transform: translateY(-50%);
+  }
+
+  .product__media-wrapper .slider-desktop-buttons .slider-button .icon{
+    height: 1rem;
   }
 
   .product__media-wrapper .slider-desktop-buttons .slider-button--prev {
@@ -1563,38 +1566,36 @@ a.product__text {
   }
 }
 
-@media screen and (min-width: 750px) {
-  slider-component.--desktop-slider {
-  }
-
-  slider-component.--desktop-slider .product__media-list {
-    display: flex;
-    overflow-x: auto;
-    flex-wrap: nowrap;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    -webkit-overflow-scrolling: touch;
-  }
-
-  slider-component.--desktop-slider .product__media-list .product__media-item {
-    width: 100%;
-    flex-shrink: 0;
-    display: block;
-    scroll-snap-align: start;
-  }
-
-  slider-component.--desktop-slider
-    .product__media-list
-    .product__media-item
-    .product-media-container,
-  slider-component.--desktop-slider
-    .product__media-list
-    .product__media-item
-    .product__modal-opener,
-  slider-component.--desktop-slider
-    .product__media-list
-    .product__media-item
-    .product__media {
-    height: 100%;
-  }
+slider-component.--desktop-slider .product__media-list {
+  width: 100%;
+  display: flex;
+  overflow-x: auto;
+  padding: 0 1.5rem;
+  flex-wrap: nowrap;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
 }
+
+slider-component.--desktop-slider .product__media-list .product__media-item {
+  width: 100%;
+  flex-shrink: 0;
+  display: block;
+  scroll-snap-align: start;
+}
+
+slider-component.--desktop-slider
+  .product__media-list
+  .product__media-item
+  .product-media-container,
+slider-component.--desktop-slider
+  .product__media-list
+  .product__media-item
+  .product__modal-opener,
+slider-component.--desktop-slider
+  .product__media-list
+  .product__media-item
+  .product__media {
+  height: 100%;
+}
+
